# pica-benchmark

./: CMakeLists.txt  LICENSE  README.md
pica/: CMakeLists.txt
pica/include/pica/currentDeposition/: CurrentDepositorYeeGrid.h
pica/include/pica/fieldInterpolation/: FieldInterpolatorYeeGrid.h
pica/include/pica/fieldSolver/: YeeSolver.h
pica/include/pica/particlePush/: BorisPusher.h  BorisPusherModified.h
pica/include/pica/particles/: ParticleBaseline.h
pica/test/src/: TestingUtility.cpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/full/: CMakeLists.txt
src/benchmark/full/01-baseline/: CMakeLists.txt  Main.cpp
src/benchmark/full/02-supercells/: CMakeLists.txt
src/benchmark/full/03-supercells-AoS/: CMakeLists.txt
src/benchmark/full/04-supercells-vec/: CMakeLists.txt
src/benchmark/full/baseline/: CMakeLists.txt  Main.cpp
src/benchmark/full/sorted/: CMakeLists.txt  Main.cpp
src/benchmark/full/supercells/: CMakeLists.txt  Main.cpp
src/benchmark/full/supercells-AoS/: CMakeLists.txt  Main.cpp
src/benchmark/full/supercells-tiling/: CMakeLists.txt  Main.cpp
src/benchmark/full/supercells-vec/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/: CMakeLists.txt
src/benchmark/pusher/01-baseline/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/02-vectorized/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/03-vectorized-soa/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/04-vectorized-soa-rcp/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/baseline/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/precomputing/: CMakeLists.txt  Main.cpp
src/benchmark/pusher/vectorized/: CMakeLists.txt  Main.cpp
src/pusher/baseline/: Main.cpp
src/utility/: CMakeLists.txt  FieldGenerator.h  Output.cpp  Output.h  Parameters.h  Parser.cpp  Parser.h  ParticleGenerator.h  Random.cpp  Random.h  Timer.cpp  Timer.h
